--- a/automotora/app/templates/registro.html
+++ b/automotora/app/templates/registro.html
@@ -1,22 +1,102 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}Simple is Better Than Complex{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="https://i.imgur.com/fnosMyk.png">
+
+    <title>Bugueño's Auto Empire</title>
+
+    <!-- Bootstrap core CSS -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <!-- Custom styles for this template -->
+    <link href="jumbotron.css" rel="stylesheet">
   </head>
+
   <body>
-    <header>
-      <h1>My Site</h1>
-      {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}">logout</a>
-      {% else %}
-        <a href="{% url 'login' %}">login</a> / <a href="{% url 'signup' %}">signup</a>
-      {% endif %}
-      <hr>
-    </header>
-    <main>
-      {% block content %}
-      {% endblock %}
+
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="">Navegación</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+      aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/automotora/">Inicio<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Registro de Vehículos</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Listado de Vehículos</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <main role="main">
+
+      <!-- Main jumbotron for a primary marketing message or call to action -->
+      <div class="jumbotron">
+        <div class="container">
+          <h1 class="display-3">Bugueño's Auto Empire</h1>
+          <p>Sitio web número 1 en ventas de automoviles usados en Chile.</p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">Aprenda &raquo;</a></p>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="card-deck">
+          <div class="card">
+            <img class="card-img-top" src="https://i.imgur.com/hQpLAG8.png" alt="Card image cap" height="250" width="300">
+            <div class="card-body">
+              <h5 class="card-title">Registre su Automóvil ahora</h5>
+              <p class="card-text">Publique su automóvil de forma sencilla y eficiente.</p>
+              <a href="#" class="btn btn-outline-primary">Registrar</a>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="https://i.imgur.com/emCg3vg.png" alt="Card image cap" height="250" width="250">
+            <div class="card-body">
+              <h5 class="card-title">Listado de Automóviles en venta</h5>
+              <p class="card-text">Seleccione un automóvil del listado para comenzar el proceso de compra.</p>
+              <a href="#" class="btn btn-outline-primary">Directorio</a>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="https://i.imgur.com/gu2uhcR.jpg" alt="Card image cap" height="250" width="250">
+            <div class="card-body">
+              <h5 class="card-title">Contáctenos</h5>
+              <p class="card-text">¿Tiene alguna queja ó sugerencia? Llene el formulario y contáctenos.</p>
+              <a href="#" class="btn btn-outline-primary">Contacto</a>
+            </div>
+          </div>
+        </div>
+
+        <hr>
+
+      </div> <!-- /container -->
+
     </main>
+
+    <footer class="container">
+      <p>&copy; Vergara's Technologies 2018</p>
+    </footer>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="../../assets/js/vendor/popper.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
   </body>
 </html>
