--- a/automotora/app/templates/registro.html
+++ b/automotora/app/templates/registro.html
@@ -1,102 +1,111 @@
-
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="https://i.imgur.com/fnosMyk.png">
 
-    <title>Bugueño's Auto Empire</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <!-- Bootstrap core CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-    <!-- Custom styles for this template -->
-    <link href="jumbotron.css" rel="stylesheet">
+    <title>Registro de Automoviles</title>
   </head>
-
   <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="">Navegación</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-      aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+          <a class="navbar-brand" href="">Navegación</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+          aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/automotora/">Inicio<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Registro de Vehículos</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Listado de Vehículos</a>
-          </li>
+          <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="/home/">Inicio<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="/registro/">Registro de Vehículos</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="/lista/">Listado de Vehículos</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+
+        <br>
+
+    <div class = "container">
+      <div class="py-5 text-center">
+        <h2>Registro de Automóvil</h2>
+        <p class="lead">Complete los campos definidos abajo para registrar su vehículo</p>
+      </div>
+      <div class="row">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4">
+
+          {% load widget_tweaks %}
+
+            <form method="post" novalidate>
+              {% csrf_token %}
+
+              {% for hidden_field in form.hidden_fields %}
+                {{ hidden_field }}
+              {% endfor %}
+
+              {% if form.non_field_errors %}
+                <div class="alert alert-danger" role="alert">
+                  {% for error in form.non_field_errors %}
+                    {{ error }}
+                  {% endfor %}
+                </div>
+              {% endif %}
+
+              {% for field in form.visible_fields %}
+                <div class="form-group">
+                  {{ field.label_tag }}
+
+                  {% if form.is_bound %}
+                    {% if field.errors %}
+                      {% render_field field class="form-control is-invalid" %}
+                      {% for error in field.errors %}
+                        <div class="invalid-feedback">
+                          {{ error }}
+                        </div>
+                      {% endfor %}
+                    {% else %}
+                      {% render_field field class="form-control is-valid" %}
+                    {% endif %}
+                  {% else %}
+                    {% render_field field class="form-control" %}
+                  {% endif %}
+
+                  {% if field.help_text %}
+                    <small class="form-text text-muted">{{ field.help_text }}</small>
+                  {% endif %}
+                </div>
+              {% endfor %}
+
+              <button type="submit" class="btn btn-primary btn-lg btn-block">Registrar</button>
+            </div>
+        <div class="col-sm-4"></div>
+    </div>
+  </div>
+
+      <footer class="my-5 pt-5 text-muted text-center text-small">
+        <p class="mb-1">&copy; Vergara's Technologies 2018</p>
+        <ul class="list-inline">
+          <li class="list-inline-item"><a href="/home/">Volver a Home</a></li>
         </ul>
-      </div>
-    </nav>
+      </footer>
+    </div>
 
-    <main role="main">
-
-      <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <div class="container">
-          <h1 class="display-3">Bugueño's Auto Empire</h1>
-          <p>Sitio web número 1 en ventas de automoviles usados en Chile.</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Aprenda &raquo;</a></p>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="card-deck">
-          <div class="card">
-            <img class="card-img-top" src="https://i.imgur.com/hQpLAG8.png" alt="Card image cap" height="250" width="300">
-            <div class="card-body">
-              <h5 class="card-title">Registre su Automóvil ahora</h5>
-              <p class="card-text">Publique su automóvil de forma sencilla y eficiente.</p>
-              <a href="#" class="btn btn-outline-primary">Registrar</a>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="https://i.imgur.com/emCg3vg.png" alt="Card image cap" height="250" width="250">
-            <div class="card-body">
-              <h5 class="card-title">Listado de Automóviles en venta</h5>
-              <p class="card-text">Seleccione un automóvil del listado para comenzar el proceso de compra.</p>
-              <a href="#" class="btn btn-outline-primary">Directorio</a>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="https://i.imgur.com/gu2uhcR.jpg" alt="Card image cap" height="250" width="250">
-            <div class="card-body">
-              <h5 class="card-title">Contáctenos</h5>
-              <p class="card-text">¿Tiene alguna queja ó sugerencia? Llene el formulario y contáctenos.</p>
-              <a href="#" class="btn btn-outline-primary">Contacto</a>
-            </div>
-          </div>
-        </div>
-
-        <hr>
-
-      </div> <!-- /container -->
-
-    </main>
-
-    <footer class="container">
-      <p>&copy; Vergara's Technologies 2018</p>
-    </footer>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
