--- a/automotora/app/templates/home.html
+++ b/automotora/app/templates/home.html
@@ -13,6 +13,9 @@
     <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
@@ -32,11 +35,14 @@ integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLP
           <li class="nav-item active">
             <a class="nav-link" href="/home/">Inicio<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="/registro/">Registro de Vehículos</a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Listado de Vehículos</a>
+          <li class="nav-item">
+            <a class="nav-link" href="/lista/">Listado de Vehículos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contacto/">Contacto</a>
           </li>
         </ul>
       </div>
@@ -49,7 +55,35 @@ integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLP
         <div class="container">
           <h1 class="display-3">Bugueño's Auto Empire</h1>
           <p>Sitio web número 1 en ventas de automoviles usados en Chile.</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Aprenda &raquo;</a></p>
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            Aprenda &raquo;
+          </button>
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title text-center" id="exampleModalLabel">Cómo usar Bugueño's Auto Empire</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  Primero: Inicie Sesión (Trabajo en progreso).
+                  <br>
+                  <br>
+                  Segundo: Para comprar navegue por la lista de autos a la venta y seleccione comprar.
+                  <br>
+                  <br>
+                  Tercero: Si quiere vender su auto, regístrelo para ponerlo en venta.
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary" data-dismiss="modal">Entendido!</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -79,7 +113,7 @@ integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLP
             <div class="card-body">
               <h5 class="card-title">Contáctenos</h5>
               <p class="card-text">¿Tiene alguna queja ó sugerencia? Llene el formulario y contáctenos.</p>
-              <a href="#" class="btn btn-outline-primary">Contacto</a>
+              <a href="/contacto/" class="btn btn-outline-primary">Contacto</a>
             </div>
           </div>
         </div>
