--- a/automotora/app/templates/contacto.html
+++ b/automotora/app/templates/contacto.html
@@ -1,6 +1,20 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="https://i.imgur.com/fnosMyk.png">
+
+    <title>Bugueño's Auto Empire</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 <body>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -21,10 +35,25 @@
         <li class="nav-item">
           <a class="nav-link" href="/lista/">Listado de Vehículos</a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="/contacto/">Contacto</a>
+        <li class="nav-item">
+          <a class="nav-link active" href="/contacto/">Contacto</a>
         </li>
       </ul>
+      <div class="navbar-collapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              {% block login1 %}
+              {% if user.is_authenticated %}
+                <font color="white">Bienvenido, {{ user.username }}!</font>
+                <a href="{% url 'logout' %}">Logout</a>
+              {% else %}
+                <font color="white">No estás autentificado!</font>
+                <a href="{% url 'login' %}">Login</a>
+              {% endif %}
+              {% endblock %}
+            </li>
+          </ul>
+      </div>
     </div>
   </nav>
 <!-- CONTACT SECTION -->
@@ -86,5 +115,13 @@
     <li class="list-inline-item"><a href="/home/">Volver a Home</a></li>
   </ul>
 </footer>
-</div>
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+<script src="../../assets/js/vendor/popper.min.js"></script>
+<script src="../../dist/js/bootstrap.min.js"></script>
 </body>
+</html>
