--- a/automotora/app/templates/home.html
+++ b/automotora/app/templates/home.html
@@ -45,6 +45,21 @@ integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLP
             <a class="nav-link" href="/contacto/">Contacto</a>
           </li>
         </ul>
+        <div class="navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                {% block login1 %}
+                {% if user.is_authenticated %}
+                  <font color="white">Bienvenido, {{ user.username }}!</font>
+                  <a href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                  <font color="white">No estás autentificado!</font>
+                  <a href="{% url 'login' %}">Login</a>
+                {% endif %}
+                {% endblock %}
+              </li>
+            </ul>
+        </div>
       </div>
     </nav>
 
