--- a/automotora/app/templates/registro.html
+++ b/automotora/app/templates/registro.html
@@ -36,6 +36,21 @@
               </li>
             </ul>
           </div>
+          <div class="navbar-collapse">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                  {% block login1 %}
+                  {% if user.is_authenticated %}
+                    <font color="white">Bienvenido, {{ user.username }}!</font>
+                    <a href="{% url 'logout' %}">Logout</a>
+                  {% else %}
+                    <font color="white">No estás autentificado!</font>
+                    <a href="{% url 'login' %}">Login</a>
+                  {% endif %}
+                  {% endblock %}
+                </li>
+              </ul>
+          </div>
         </nav>
 
         <br>
