--- a/automotora/app/templates/registration/login.html
+++ b/automotora/app/templates/registration/login.html
@@ -16,9 +16,12 @@ integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLP
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<script src="https://cdn.rawgit.com/oauth-io/oauth-js/c5af4519/dist/oauth.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></script>
 
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
@@ -60,78 +63,48 @@ integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLP
               </li>
             </ul>
         </div>
-      </div>
     </nav>
+    <body>
+    <br>
+    <br>
+    <br>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+        <div class="card card-signin my-5">
+          <div class="card-body">
+            <h2 class="card-title text-center">Iniciar Sesión</h2>
+            <br>
+
+            <div class="container">
+              <div class="row">
+                <div class="col">
+                </div>
+                <div class="col-6">
+                  {% block login %}
+                    <form method="post">
+                      {% csrf_token %}
+                      {{ form.as_p }}
+                      <button class="btn btn-lg btn-primary btn-block" type="submit">Iniciar Sesión</button>
+                    </form>
+                </div>
+                <div class="col">
+                </div>
+              </div>
+              <hr class="my-4">
+              <a href="{% url 'social:begin' 'facebook' %}" class="btn btn-lg btn-primary btn-block">Iniciar Sesión con Facebook</a>
+              <br>
+              <a href="{% url 'signup' %}"><p class="text-center">¿No estás registrado? Regístrate!<p><a>
+            {% endblock %}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <main role="main">
 
-      <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <div class="container">
-          <h1 class="display-3">Bugueño's Auto Empire</h1>
-          <p>Sitio web número 1 en ventas de automoviles usados en Chile.</p>
-          <!-- Button trigger modal -->
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            Aprenda &raquo;
-          </button>
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title text-center" id="exampleModalLabel">Cómo usar Bugueño's Auto Empire</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  Primero: Inicie Sesión (Trabajo en progreso).
-                  <br>
-                  <br>
-                  Segundo: Para comprar navegue por la lista de autos a la venta y seleccione comprar.
-                  <br>
-                  <br>
-                  Tercero: Si quiere vender su auto, regístrelo para ponerlo en venta.
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-primary" data-dismiss="modal">Entendido!</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
       <div class="container">
-        <div class="card-deck">
-          <div class="card">
-            <a href="https://i.imgur.com/hQpLAG8" class="btn disabled"><img class="card-img-top" src="https://i.imgur.com/hQpLAG8.png" alt="Card image cap" height="250" width="300">
-            </a>
-            <div class="card-body">
-              <h5 class="card-title">Registre su Automóvil ahora</h5>
-              <p class="card-text">Publique su automóvil de forma sencilla y eficiente.</p>
-              <a href="/registro/" class="btn btn-outline-primary">Registrar</a>
-            </div>
-          </div>
-          <div class="card">
-            <a href="https://i.imgur.com/emCg3vg" class="btn disabled"><img class="card-img-top" src="https://i.imgur.com/emCg3vg.png" alt="Card image cap" height="250" width="250">
-            </a>
-            <div class="card-body">
-              <h5 class="card-title">Listado de Automóviles en venta</h5>
-              <p class="card-text">Seleccione un automóvil del listado para comenzar el proceso de compra.</p>
-              <a href="/lista/" class="btn btn-outline-primary">Directorio</a>
-            </div>
-          </div>
-          <div class="card">
-            <a href="https://i.imgur.com/gu2uhcR" class="btn disabled"><img class="card-img-top" src="https://i.imgur.com/gu2uhcR.jpg" alt="Card image cap" height="250" width="250">
-            </a>
-            <div class="card-body">
-              <h5 class="card-title">Contáctenos</h5>
-              <p class="card-text">¿Tiene alguna queja ó sugerencia? Llene el formulario y contáctenos.</p>
-              <a href="/contacto/" class="btn btn-outline-primary">Contacto</a>
-            </div>
-          </div>
-        </div>
 
         <hr>
 
@@ -139,8 +112,31 @@ integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLP
 
     </main>
 
+    <script>
+  $('#facebook-button').on('click', function() {
+    // Initialize with your OAuth.io app public key
+    OAuth.initialize('YOUR_OAUTH_KEY');
+    // Use popup for oauth
+    OAuth.popup('facebook').then(facebook => {
+      console.log('facebook:',facebook);
+      // Prompts 'welcome' message with User's email on successful login
+      // #me() is a convenient method to retrieve user data without requiring you
+      // to know which OAuth provider url to call
+      facebook.me().then(data => {
+        console.log('me data:', data);
+        alert('Facebook says your email is:' + data.email + ".\nView browser 'Console Log' for more details");
+      })
+      // Retrieves user data from OAuth provider by using #get() and
+      // OAuth provider url
+      facebook.get('/v2.5/me?fields=name,first_name,last_name,email,gender,location,locale,work,languages,birthday,relationship_status,hometown,picture').then(data => {
+        console.log('self data:', data);
+      })
+    });
+  })
+</script>
+
     <footer class="container">
-      <p>&copy; Vergara's Technologies 2018</p>
+      <p class="text-center">&copy; Vergara's Technologies 2018</p>
     </footer>
 
     <!-- Bootstrap core JavaScript
