--- a/automotora/app/templates/contacto.html
+++ b/automotora/app/templates/contacto.html
@@ -17,7 +17,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 <body>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-success">
     <a class="navbar-brand" href="">Navegación</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
     aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
                 <a href="{% url 'logout' %}">Logout</a>
               {% else %}
                 <font color="white">No estás autentificado!</font>
-                <a href="{% url 'login' %}">Login</a>
+                <a href="{% url 'login' %}"><font color="white">Login</font></a>
               {% endif %}
               {% endblock %}
             </li>
@@ -88,7 +88,7 @@
                               </div>
                               <br>
                               <div class="col-md-offset-8 col-md-4 col-sm-offset-6 col-sm-6">
-                                   <button id="submit" type="submit" class="form-control btn btn-outline-primary" name="submit">Enviar Mensaje</button>
+                                   <button id="submit" type="submit" class="form-control btn bg-success" name="submit"><font color="white">Enviar Mensaje</font></button>
                               </div>
                         </form>
                     </div>
