--- a/automotora/app/templates/lista.html
+++ b/automotora/app/templates/lista.html
@@ -10,8 +10,8 @@
 
     <title>Directorio de Vehículos a la venta</title>
   </head>
-  <body>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <body bgcolor="#9AD58E">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-success">
       <a class="navbar-brand" href="">Navegación</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
                   <a href="{% url 'logout' %}">Logout</a>
                 {% else %}
                   <font color="white">No estás autentificado!</font>
-                  <a href="{% url 'login' %}">Login</a>
+                  <a href="{% url 'login' %}"><font color="white">Login</font></a>
                 {% endif %}
                 {% endblock %}
               </li>
@@ -63,15 +63,15 @@
 
       {% for instance in object_list %}
       <ul class="list-group mx-auto" style="max-width: 19rem;">
-        <li class="list-group-item text-center"><p class="text-primary text-center font-weight-bold">Marca:</p>{{instance.marca}}</li>
-        <li class="list-group-item text-center"><p class="text-primary text-center font-weight-bold">Modelo:</p>{{instance.modelo}}</li>
-        <li class="list-group-item text-center"><p class="text-primary text-center font-weight-bold">Color:</p>{{instance.color}}</li>
-        <li class="list-group-item text-center"><p class="text-primary text-center font-weight-bold">Año:</p>{{instance.año}}</li>
-        <li class="list-group-item text-center"><p class="text-primary text-center font-weight-bold">Número de Puertas:</p>{{instance.número_Puertas}}</li>
-        <li class="list-group-item text-center"><p class="text-primary text-center font-weight-bold">Precio:</p>${{instance.precio}}</li>
-        <li class="list-group-item text-justify"><p class="text-primary text-center font-weight-bold">Descripción:</p>{{instance.descripción}}</li>
-        <li class="list-group-item text-center"><p class="text-primary text-center font-weight-bold">Fecha de Publicación:</p>{{instance.fecha_de_Publicación}}</li>
-        <button type="submit" class="btn btn-primary btn-lg btn-block">Comprar</button>
+        <li class="list-group-item text-center"><p class="text-success text-center font-weight-bold">Marca:</p>{{instance.marca}}</li>
+        <li class="list-group-item text-center"><p class="text-success text-center font-weight-bold">Modelo:</p>{{instance.modelo}}</li>
+        <li class="list-group-item text-center"><p class="text-success text-center font-weight-bold">Color:</p>{{instance.color}}</li>
+        <li class="list-group-item text-center"><p class="text-success text-center font-weight-bold">Año:</p>{{instance.año}}</li>
+        <li class="list-group-item text-center"><p class="text-success text-center font-weight-bold">Número de Puertas:</p>{{instance.número_Puertas}}</li>
+        <li class="list-group-item text-center"><p class="text-success text-center font-weight-bold">Precio:</p>${{instance.precio}}</li>
+        <li class="list-group-item text-justify"><p class="text-success text-center font-weight-bold">Descripción:</p>{{instance.descripción}}</li>
+        <li class="list-group-item text-center"><p class="text-success text-center font-weight-bold">Fecha de Publicación:</p>{{instance.fecha_de_Publicación}}</li>
+        <button type="submit" class="btn btn-success btn-lg btn-block">Comprar</button>
         <br>
       </ul>
       <br>
