--- a/automotora/app/templates/registration/login.html
+++ b/automotora/app/templates/registration/login.html
@@ -16,14 +16,16 @@ integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLP
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<script src="https://cdn.rawgit.com/oauth-io/oauth-js/c5af4519/dist/oauth.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></script>
 
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
-
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-success">
       <a class="navbar-brand" href="">Navegación</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +56,7 @@ integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLP
                   <a href="{% url 'logout' %}">Logout</a>
                 {% else %}
                   <font color="white">No estás autentificado!</font>
-                  <a href="{% url 'login' %}">Login</a>
+                  <a href="{% url 'login' %}"><font color="white">Login</font></a>
                 {% endif %}
                 {% endblock %}
               </li>
@@ -72,16 +74,26 @@ integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLP
           <div class="card-body">
             <h2 class="card-title text-center">Iniciar Sesión</h2>
             <br>
-            {% block login %}
-              <form method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Iniciar Sesión</button>
-              </form>
+
+            <div class="container">
+              <div class="row">
+                <div class="col">
+                </div>
+                <div class="col-6">
+                  {% block login %}
+                    <form method="post">
+                      {% csrf_token %}
+                      {{ form.as_p }}
+                      <button class="btn btn-lg bg-success btn-block" type="submit"><font color="white">Iniciar Sesión</font></button>
+                    </form>
+                </div>
+                <div class="col">
+                </div>
+              </div>
               <hr class="my-4">
-              <a href="{% url 'social:begin' 'facebook' %}" class="btn btn-lg btn-primary btn-block">Iniciar Sesión con Facebook</a>
+              <a href="{% url 'social:begin' 'facebook' %}" class="btn btn-lg bg-success btn-block"><font color="white">Iniciar Sesión con Facebook</font></a>
               <br>
-              <a href="{% url 'login' %}"><p class="text-center">¿No estás registrado? Regístrate!<p><a>
+              <a href="{% url 'signup' %}"><p class="text-center"><font color="black">¿No estás registrado? Regístrate!</font><p><a>
             {% endblock %}
           </div>
         </div>
@@ -98,6 +110,29 @@ integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLP
       </div> <!-- /container -->
 
     </main>
+
+    <script>
+  $('#facebook-button').on('click', function() {
+    // Initialize with your OAuth.io app public key
+    OAuth.initialize('YOUR_OAUTH_KEY');
+    // Use popup for oauth
+    OAuth.popup('facebook').then(facebook => {
+      console.log('facebook:',facebook);
+      // Prompts 'welcome' message with User's email on successful login
+      // #me() is a convenient method to retrieve user data without requiring you
+      // to know which OAuth provider url to call
+      facebook.me().then(data => {
+        console.log('me data:', data);
+        alert('Facebook says your email is:' + data.email + ".\nView browser 'Console Log' for more details");
+      })
+      // Retrieves user data from OAuth provider by using #get() and
+      // OAuth provider url
+      facebook.get('/v2.5/me?fields=name,first_name,last_name,email,gender,location,locale,work,languages,birthday,relationship_status,hometown,picture').then(data => {
+        console.log('self data:', data);
+      })
+    });
+  })
+</script>
 
     <footer class="container">
       <p class="text-center">&copy; Vergara's Technologies 2018</p>
