--- a/automotora/app/templates/registro.html
+++ b/automotora/app/templates/registro.html
@@ -12,8 +12,7 @@
     <title>Registro de Automoviles</title>
   </head>
   <body>
-
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-success">
           <a class="navbar-brand" href="">Navegación</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
           aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +44,7 @@
                     <a href="{% url 'logout' %}">Logout</a>
                   {% else %}
                     <font color="white">No estás autentificado!</font>
-                    <a href="{% url 'login' %}">Login</a>
+                    <a href="{% url 'login' %}"><font color="white">Login</font></a>
                   {% endif %}
                   {% endblock %}
                 </li>
@@ -106,7 +105,7 @@
                 </div>
               {% endfor %}
 
-              <button type="submit" class="btn btn-primary btn-lg btn-block">Registrar</button>
+              <button type="submit" class="btn btn-lg bg-success btn-block"><font color="white">Registrar</font></button>
             </div>
         <div class="col-sm-4"></div>
     </div>
